# ELog

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bench.yml  ci.yml
benchmarks/: CMakeLists.txt  asm_inspect.sh  bench_ablation.cpp  bench_basic.cpp  bench_compare.cpp  bench_compose.cpp  bench_everyn.cpp  bench_itoa.cpp  bench_perf.cpp  run_perf.sh
docs/: aggregation.md  custom-types.md  getting-started.md  multi-logger.md  performance.md  sinks.md
examples/: CMakeLists.txt  aggregation.cpp  async_sink_skeleton.cpp  basic.cpp  custom_type.cpp  multi_logger.cpp
include/elog/: aggregate.hpp  buffered_file_sink.hpp  elog.hpp  emit.hpp  format.hpp  grisu2.hpp  iov.hpp  iov_pack.hpp  level.hpp  logger.hpp  macros.hpp  prologue.hpp  registry.hpp  render.hpp  render_extra.hpp  rotating_sink.hpp  scratch.hpp  sink.hpp  sink_async.hpp  string_ref.hpp
src/: aggregate.cpp  buffered_file_sink.cpp  default_logger.cpp  grisu2.cpp  level.cpp  logger.cpp  prologue.cpp  registry.cpp  render.cpp  render_extra.cpp  rotating_sink.cpp  scratch.cpp  sink.cpp
tests/: CMakeLists.txt  test_aggregate.cpp  test_buffered_file_sink.cpp  test_format.cpp  test_iov_pack.cpp  test_lazy.cpp  test_logger.cpp  test_registry.cpp  test_render.cpp  test_render_extra.cpp  test_rotating_sink.cpp  test_tie.cpp  test_writev_atomicity.cpp
